--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "db:up": "drizzle-kit up",
     "test": "export PLAYWRIGHT=True && pnpm exec playwright test"
   },
+  "release": {
+  "branches": ["main"]
+  },
   "dependencies": {
     "@ai-sdk/react": "^1.2.11",
     "@ai-sdk/xai": "^1.2.15",
@@ -105,6 +108,7 @@
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "postcss": "^8",
+    "semantic-release": "^24.2.5",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3"
