--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test": "export PLAYWRIGHT=True && pnpm exec playwright test"
   },
   "release": {
-  "branches": ["main"]
+    "branches": [
+      "main"
+    ]
   },
   "dependencies": {
     "@ai-sdk/react": "^1.2.11",
